--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,27 @@
 # API Settings
 CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+API_V1_STR=/api/v1
+PROJECT_NAME=Document QA System
+SECRET_KEY=your-secret-key-here
+
+# Server Settings
+HOST=0.0.0.0
+PORT=8000
 
 # OpenAI
 OPENAI_API_KEY=your-openai-api-key
 
 # Redis
 REDIS_URL=redis://redis:6379/0
+RATE_LIMIT_PER_MINUTE=60
 
 # File Upload
 MAX_UPLOAD_SIZE=10485760  # 10MB
+ALLOWED_EXTENSIONS=pdf,txt,doc,docx
 
 # Logging
-LOG_LEVEL=INFO 
+LOG_LEVEL=INFO
+
+# Storage
+UPLOAD_DIR=uploads
+STORAGE_DIR=storage 
